# openmls

./: .drone.yml  .gitignore  .travis.yml  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Developer.md  Dockerfile  LICENSE  Mayhemfile  README.md  cgka-efficiency-report.md  codecov.yml  crates.js  index.html  perf.sh  rfc9420.txt  rustfmt.toml  search-index.js  settings.html  source-files.js  structiagram.md  test_state.json  validate_pr.sh
basic_credential/: CHANGELOG.md  Cargo.toml  Readme.md
basic_credential/src/: lib.rs
cli/: .gitignore  Cargo.toml  README.md
cli/src/: backend.rs  conversation.rs  file_helpers.rs  identity.rs  main.rs  networking.rs  openmls_rust_persistent_crypto.rs  persistent_key_store.rs  serialize_any_hashmap.rs  user.rs
compat_tests/: Cargo.toml  README.md  test.sh
compat_tests/src/: lib.rs  storage_tag_check.rs  test_crypto_provider.rs  test_storage_provider.rs
compat_tests/tests/: storage_migration_book_code.rs  test_migration.rs  test_optional_field_stability.rs  test_storage_migration.rs  test_storage_tag_stability.rs
entropy_pool/: Cargo.toml
entropy_pool/src/: lib.rs  tests.rs
evercrypt_backend/: Cargo.toml  README.md
evercrypt_backend/src/: lib.rs  provider.rs  signature.rs
interop_client/: Cargo.toml  README.md  build.rs  config.json  test_with_runner.py
interop_client/docker/: debug-scenario.py  docker-compose.yml  run-interop.py
interop_client/proto/: mls_client.proto
interop_client/src/: main.rs
kat_generation/: Cargo.toml
kat_generation/src/: kat_encryption.rs  kat_tree_kem.rs  lib.rs
libcrux_backend/: Cargo.toml
libcrux_backend/src/: lib.rs  provider.rs
libcrux_crypto/: CHANGELOG.md  Cargo.toml
libcrux_crypto/src/: crypto.rs  ff1.rs  lib.rs  rand.rs
memory-storage/: Cargo.toml
memory-storage/src/: impl_storagekey.rs  kv.rs  lib.rs
memory_keystore/: Cargo.toml  README.md
memory_keystore/src/: lib.rs  test_store.rs
memory_storage/: CHANGELOG.md  Cargo.toml  README.md
memory_storage/src/: lib.rs  per_group_locking.rs  persistence.rs  test_store.rs  tests.rs
memory_storage/tests/: per_group_locking.rs  proposals.rs  provider.rs  vc_operation_tree.rs
openmls/: Cargo.toml  README.md  TEST-DESIGN.md  all.html  index.html  sidebar-items.js
openmls-tree-health/: Cargo.toml  README.md
openmls-tree-health/src/: lib.rs  tree_state.rs
openmls-tree-health/tests/: integration.rs
openmls-wasm/: Cargo.toml  LICENSE_MIT  README.md  build.sh  check-size.sh  index.html
openmls-wasm/src/: lib.rs
openmls-wasm/static/: index.html
openmls-wasm/www/: index.js  package.json  webpack.config.js
openmls/benches/: BENCHMARKS.md  README.md  bench.py  benchmark.rs  benchmark_results.json  large-balanced-group.rs
openmls/ciphersuite/: constant.AES_128_KEY_BYTES.html  constant.AES_256_KEY_BYTES.html  constant.CHACHA_KEY_BYTES.html  constant.NONCE_BYTES.html  constant.REUSE_GUARD_BYTES.html  constant.TAG_BYTES.html  enum.AEADError.html  enum.AeadType.html  enum.CiphersuiteName.html  enum.CryptoError.html  enum.HKDFError.html  enum.HashType.html  enum.SignatureScheme.html  fn.ciphertext_sample.html  fn.equal_ct.html  index.html  sidebar-items.js  static.EMPTY_SECRET.html  struct.AeadKey.html  struct.AeadNonce.html  struct.Ciphersuite.html  struct.HashReference.html  struct.HpkeCiphertext.html  struct.HpkePublicKey.html  struct.KdfLabel.html  struct.Mac.html  struct.ReuseGuard.html  struct.Secret.html  struct.Signature.html  struct.SignatureKeypair.html  struct.SignaturePrivateKey.html  struct.SignaturePublicKey.html  type.KeyPackageRef.html  type.ProposalRef.html
openmls/codec/: enum.CodecError.html  enum.VecSize.html  fn.decode_vec.html  fn.encode_vec.html  index.html  sidebar-items.js  struct.Cursor.html  trait.Codec.html  trait.Decode.html  trait.Encode.html
openmls/config/: constant.DEFAULT_KEY_PACKAGE_LIFETIME.html  constant.DEFAULT_KEY_PACKAGE_LIFETIME_MARGIN.html  constant.SUPPORTED_CIPHERSUITE_NAMES.html  enum.ProtocolVersion.html  index.html  sidebar-items.js  struct.CONFIG.html  struct.Config.html  struct.Constants.html  struct.PersistentConfig.html
openmls/credentials/: enum.CredentialError.html  enum.CredentialType.html  enum.MLSCredentialType.html  enum.MlsCredentialType.html  index.html  sidebar-items.js  struct.BasicCredential.html  struct.Certificate.html  struct.Credential.html  struct.CredentialBundle.html
openmls/creds/: enum.CredentialError.html  enum.CredentialType.html  enum.MLSCredentialType.html  index.html  sidebar-items.js  struct.BasicCredential.html  struct.Certificate.html  struct.Credential.html  struct.CredentialBundle.html
openmls/error/: index.html  sidebar-items.js  struct.ErrorPayload.html  struct.ErrorString.html
openmls/errors/: enum.ConfigError.html  enum.Error.html  index.html  sidebar-items.js
openmls/examples/: app_data_dictionary.rs  basic_client.rs  codec.rs  large-groups.rs
openmls/extensions/: constant._Extension_registry.html  enum.Extension.html  enum.ExtensionError.html  enum.ExtensionType.html  fn.encode_extensions.html  fn.extensions_vec_from_cursor.html  fn.from_bytes.html  index.html  sidebar-items.js  struct.CapabilitiesExtension.html  struct.ExtensionStruct.html  struct.KeyIDExtension.html  struct.KeyIdExtension.html  struct.LifetimeExtension.html  struct.ParentHashExtension.html  struct.RatchetTreeExtension.html  struct.RequiredCapabilitiesExtension.html  trait.Extension.html  (+1 more)
openmls_async_tests/: Cargo.toml
openmls_rust_crypto/: CHANGELOG.md  Cargo.toml  README.md  Readme.md
openmls_rust_crypto_hpke_ng/: Cargo.toml  README.md
openmls_test/: CHANGELOG.md  Cargo.toml  Readme.md
openmls_wasm/: Cargo.toml  index.js
per_group_lock_demo/: Cargo.toml  Readme.md
rust_crypto/: Cargo.toml
serialization_helpers/: Cargo.toml  README.md
sqlite_storage/: CHANGELOG.md  Cargo.toml  README.md
sqlx_storage/: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md
tls-codec/: Cargo.toml
tls-codec-derive/: Cargo.toml
traits/: CHANGELOG.md  Cargo.toml  README.md
x509_credential/: Cargo.toml
(+20184 files in other folders)
