[workspace]
members = [
  "openmls",
  "traits",
  "openmls_rust_crypto",
  "libcrux_crypto",
  "fuzz",
  "cli",
  "interop_client",
  "memory_storage",
  "sqlite_storage",
  "delivery-service/ds",
  "delivery-service/ds-lib",
  "basic_credential",
  "openmls-wasm",
  "openmls_test",
]
resolver = "2"

# Central dependency management for some crates
[workspace.dependencies]
tls_codec = { version = "0.4.1", features = ["derive", "serde", "mls"] }
