[package]
name = "cli"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2018"

[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
termion = "1.5"
tls_codec = "0.2.0"

openmls = { path = "../openmls", features = ["test-utils"] }
ds-lib = { path = "../delivery-service/ds-lib" }
openmls_traits = { path = "../traits" }
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_memory_keystore = { path = "../memory_keystore" }

# Patching unreleased crates
[patch.crates-io]
tls_codec = { git = "https://github.com/RustCrypto/formats.git", features = ["derive", "serde_serialize"] }
