[package]
name = "cli"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"

[dependencies]
url = "2.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
log = "0.4"
pretty_env_logger = "0.5"

openmls = { path = "../openmls", features = ["test-utils"] }
ds-lib = { path = "../delivery-service/ds-lib" }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_memory_storage = { workspace = true, features = ["persistence"] }
openmls_basic_credential = { workspace = true }
serde = { version = "^1.0" }
thiserror = "2.0"
serde_json = "1.0"
rand_chacha = { version = "0.3.1" }

[dependencies.termion]
version = "1.5"
git = "https://gitlab.redox-os.org/Jezza/termion.git"
branch = "windows-support"
