[package]
name = "entropy-pool"
version = "0.3.0"
authors = ["Konrad Kohbrok <konrad.kohbrok@datashrine.de>"]
edition = "2018"
description = "This is a WIP implementation of a general purpose entropy pool."
license = "MIT"

[dependencies]
rand = "^0.8"
evercrypt = { version = "0.0.10", features = ["serialization"] }
tls_codec = { version = "0.1.4", features = ["derive", "serde_serialize"] }
serde = { version = "^1.0", features = ["derive"] }