[package]
name = "openmls_evercrypt"
authors = ["OpenMLS Authors"]
version = "0.1.0"
edition = "2018"
description = "A crypto backend for OpenMLS implementing openmls_traits using HACL/Evercrypt."
license = "MIT"
documentation = "https://docs.rs/openmls_evercrypt"
repository = "https://github.com/openmls/openmls/tree/main/evercrypt_backend"
readme = "README.md"

[dependencies]
openmls_traits = { version = "0.1.0", path = "../traits" }
evercrypt = { version = "0.0.11", features = ["serialization"] }
openmls_memory_keystore = { version = "0.1.0", path = "../memory_keystore", package = "openmls_memory_keystore" }
rand = "0.8"
rand_chacha = { version = "0.3" }
hpke = { version = "0.1.0", package = "hpke-rs", features = ["hazmat", "serialization"] }
log = { version = "0.4", features = ["std"] }
hpke-rs-crypto = { version = "0.1.1" }
hpke-rs-evercrypt = { version = "0.1.2" }
thiserror = "1.0"
