[package]
name = "interop_client"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmls = { path = "../openmls", features = ["test-utils"]}
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_traits = { path = "../traits" }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.19.2", features = ["macros",  "net", "rt-multi-thread"] }
clap = "3.1"
clap_derive = "3.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tls_codec = { version = "0.2.0", features = ["derive", "serde_serialize"] }
pretty_env_logger = "0.4"

[build-dependencies]
tonic-build = "0.7"
