[package]
name = "interop_client"
version = "0.2.0"
authors = ["OpenMLS Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Forward feature to openmls.
crypto-debug = ["openmls/crypto-debug"]

[dependencies]
openmls = { path = "../openmls", features = ["test-utils"]}
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_traits = { path = "../traits" }

mls_interop_proto = { git = "https://github.com/mlswg/mls-implementations/" }

tonic = "0.8"
tokio = { version = "1.19.2", features = ["macros",  "net", "rt-multi-thread"] }
clap = "4.1"
clap_derive = "4.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tls_codec = { workspace = true }
openmls_basic_credential = { version = "0.2.0", path = "../basic_credential" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
