[package]
name = "interop_client"
version = "0.2.0"
authors = ["OpenMLS Authors"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Forward features to openmls.
crypto-debug = ["openmls/crypto-debug"]
extensions-draft = [
    "openmls/extensions-draft",
    # The storage backends enabled via `test-utils` only implement the
    # `extensions-draft` trait methods with their own feature on.
    "openmls/extensions-draft-test-dependencies",
]

[dependencies]
openmls = { path = "../openmls", features = ["test-utils"] }
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_traits = { path = "../traits" }

mls_interop_proto = { git = "https://github.com/mlswg/mls-implementations/" }

tonic = "0.14"
tokio = { version = "1.52.1", features = ["macros", "net", "rt-multi-thread"] }
clap = "4.6"
clap_derive = "4.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "^1.0"
tls_codec = { workspace = true }
openmls_basic_credential = { path = "../basic_credential" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
