[package]
name = "kat_generation"
version = "0.1.0"
authors = ["Konrad Kohbrok <konrad.kohbrok@datashrine.de>"]
edition = "2018"

[dependencies]
test_utils = { path = "../test_utils" }
openmls = { path = "../openmls", features = ["expose-test-vectors"] }
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tls-codec = { version = "0.1", path = "../tls-codec", features = ["derive", "hpke"] }
log = { version = "0.4", features = ["std"] }
itertools = { version = "0.10" }
