[package]
name = "openmls_libcrux_crypto"
version = "0.3.0"
edition = "2021"
authors = ["OpenMLS Authors"]
description = "A crypto backend for OpenMLS based on libcrux implementing openmls_traits."
license = "MIT"
documentation = "https://docs.rs/openmls_libcrux_crypto"
repository = "https://github.com/openmls/openmls/tree/main/openmls_libcrux_crypto"
readme = "../README.md"

[dependencies]
libcrux-aead = { version = "0.0.5" }
libcrux-ed25519 = { version = "0.0.5", features = ["rand"] }
libcrux-hkdf = { version = "0.0.5" }
libcrux-sha2 = { version = "0.0.5" }
libcrux-hmac = { version = "0.0.5" }
libcrux-traits = { version = "0.0.5" }

openmls_traits = { workspace = true }
openmls_memory_storage = { workspace = true }

rand = "0.9"
tls_codec.workspace = true
rand_chacha = "0.9"

hpke-rs = { version = "0.5.1", features = ["hazmat", "serialization"] }
hpke-rs-crypto = { version = "0.4.0" }
hpke-rs-libcrux = { version = "0.5.1" }

[features]
extensions-draft-08 = [
    "openmls_traits/extensions-draft-08",
    "openmls_memory_storage/extensions-draft-08",
]
