[package]
authors = ["OpenMLS Authors"]
description = "A crypto backend for OpenMLS based on libcrux implementing openmls_traits."
documentation = "https://docs.rs/openmls_libcrux_crypto"
edition = "2021"
license = "MIT"
name = "openmls_libcrux_crypto"
readme = "../README.md"
repository = "https://github.com/openmls/openmls/tree/main/openmls_libcrux_crypto"
version = "0.3.1"

[dependencies]
libcrux-aead = { version = "0.0.6" }
libcrux-ed25519 = { version = "0.0.6", features = ["rand"] }
libcrux-hkdf = { version = "0.0.6" }
libcrux-hmac = { version = "0.0.6" }
libcrux-sha2 = { version = "0.0.6" }
libcrux-traits = { version = "0.0.6" }

openmls_memory_storage = { workspace = true }
openmls_traits = { workspace = true }

rand = "0.9"
rand_chacha = "0.9"
tls_codec.workspace = true

hpke-rs = { version = "0.6.0", features = ["hazmat", "serialization"] }
hpke-rs-crypto = { version = "0.6.0" }
hpke-rs-libcrux = { version = "0.6.0" }

[features]
async = ["openmls_memory_storage/async", "openmls_traits/async"]
extensions-draft-08 = [
    "openmls_memory_storage/extensions-draft-08",
    "openmls_traits/extensions-draft-08",
]
sync = ["openmls_memory_storage/sync", "openmls_traits/sync"]
