[package]
name = "openmls_libcrux_crypto"
version = "0.3.1"
edition = "2021"
rust-version.workspace = true
authors = ["OpenMLS Authors"]
description = "A crypto backend for OpenMLS based on libcrux implementing openmls_traits."
license = "MIT"
documentation = "https://docs.rs/openmls_libcrux_crypto"
repository = "https://github.com/openmls/openmls/tree/main/openmls_libcrux_crypto"
readme = "../README.md"

[dependencies]
libcrux-aead = { version = "0.0.7" }
libcrux-ed25519 = { version = "0.0.7", features = ["rand"] }
libcrux-hkdf = { version = "0.0.6" }
libcrux-sha2 = { version = "0.0.6" }
libcrux-hmac = { version = "0.0.6" }
libcrux-traits = { version = "0.0.6" }

openmls_traits = { workspace = true }
openmls_memory_storage = { workspace = true }

rand = "0.9"
tls_codec.workspace = true
rand_chacha = "0.9"

hpke-rs = { version = "0.6.1", features = ["hazmat", "serialization"] }
hpke-rs-crypto = { version = "0.6.1" }
hpke-rs-libcrux = { version = "0.6.1" }

# FF1-AES128 backing for the virtual-clients-draft reuse-guard PRP.
# libcrux has no FF1 implementation, so this provider also uses the
# RustCrypto-based `fpe` crate.
fpe = { version = "0.6", optional = true }
aes = { version = "0.8", optional = true }

[features]
extensions-draft = [
    "openmls_traits/extensions-draft",
    "openmls_memory_storage/extensions-draft",
]
draft-ietf-mls-pq-ciphersuites = [
    "openmls_traits/draft-ietf-mls-pq-ciphersuites",
    "openmls_memory_storage/draft-ietf-mls-pq-ciphersuites",
]
virtual-clients-draft = [
    "extensions-draft",
    "openmls_traits/virtual-clients-draft",
    "openmls_memory_storage/virtual-clients-draft",
    "dep:fpe",
    "dep:aes",
]
