[package]
name = "openmls-memory-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmls_traits = { version = "0.2.0", path = "../traits" }
openmls-spec-types = { version = "0.1.0", path = "../spec-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
