[package]
name = "openmls_memory_keystore"
authors = ["OpenMLS Authors"]
version = "0.2.0"
edition = "2021"
description = "A very basic key store for OpenMLS implementing openmls_traits."
license = "MIT"
documentation = "https://docs.rs/openmls_memory_keystore"
repository = "https://github.com/openmls/openmls/tree/main/memory_keystore"
readme = "README.md"

[dependencies]
openmls_traits = { version = "0.2.0", path = "../traits" }
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
hex = { version = "0.4", features = ["serde"], optional = true }

[features]
test-utils = ["hex", "openmls_traits/test-utils"] # Enable test utilites

[dev-dependencies]
openmls_memory_keystore = { path = ".", features = ["test-utils"] }
