[package]
name = "openmls_memory_storage"
authors = ["OpenMLS Authors"]
version = "0.3.0"
edition = "2021"
description = "A very basic storage for OpenMLS implementing openmls_traits."
license = "MIT"
documentation = "https://docs.rs/openmls_memory_storage"
repository = "https://github.com/openmls/openmls/tree/main/memory_storage"
readme = "README.md"

[dependencies]
openmls_traits = { version = "0.3.0", path = "../traits" }
thiserror = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
hex = { version = "0.4", features = ["serde"], optional = true }
base64 = { version = "0.22", optional = true }

[features]
test-utils = ["hex", "openmls_traits/test-utils"] # Enable test utilites
persistence = ["base64"]

[dev-dependencies]
openmls_memory_storage = { path = ".", features = ["test-utils"] }
