[package]
name = "openmls-tree-health"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "Tree maintenance helpers for OpenMLS groups"
license = "MIT"
repository = "https://github.com/openmls/openmls/tree/main/openmls-tree-health"

[dependencies]
openmls = { workspace = true }

[dev-dependencies]
openmls = { workspace = true, features = ["test-utils"] }
openmls_test = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
pretty_env_logger = "0.5"
